src/styles/post.scss
@use "../themes/variables" as *;

#article {
  padding: 0 14px;
  padding-bottom: 40vh;

  .pagebody {
    max-width: 980px;
    margin: auto;
    line-height: 1.5;
    font-size: 17px;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h5,
  p {
    max-width: $articleContent;
    margin: auto;
  }

  p {
    opacity: 0.9;
  }

  pre {
    max-width: $articleContent;
  }

  .katex-display {
    // margin: 56px auto;
    margin: 20px auto;
    max-width: $articleContentWide;
    width: 100%;
    opacity: 0.9;
    overflow-x: scroll;
  }

  .seperator-line {
    background-color: $seperator;
    margin: 20px 0;
    width: 100%;
    height: 1px;
  }

  h1,
  h2,
  h3,
  h4,
  h5 {
    font-weight: 400;
    margin-bottom: 0.2em;
  }

  h1 {
    margin-top: 1.6em;
    font-size: 2em;
  }

  h2 {
    margin-top: 1em;
    font-size: 1.5em;
  }

  h3,
  h4,
  h5 {
    margin-top: 0.6em;
  }

  .article-header {
    padding-top: 60px;
    margin: auto;
    margin-bottom: 40px;
    max-width: $articleContent;
  }

  .article-breadcrumbs {
    margin-bottom: 20px;
    font-size: 0.8em;
    color: $textSecondary;
    a {
      color: $textPrimary;
    }
  }

  .pagetitle {
    font-size: 42px;
    margin: 0;
  }

  .article-subtitle {
    font-size: 24px;
    font-weight: 400;
    margin-top: 4px;
    color: $textSecondary;
  }

  .article-date {
    color: $textSecondary;
    font-size: 14px;
    margin-bottom: 10px;
  }

  ul {
    margin: auto;
    padding-left: 40px;
    max-width: $articleContent;
  }

  @media (prefers-color-scheme: dark) {
    p {
      opacity: 0.8;
    }
    .article-subtitle {
      color: $textSecondaryDark;
    }

    .article-date {
      color: $textSecondaryDark;
    }

    .article-breadcrumbs {
      color: $textSecondaryDark;
      a {
        color: $textPrimaryDark;
      }
    }
  }
}

